--- a/index.html
+++ b/index.html
@@ -7,11 +7,43 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
     <link rel="stylesheet" href="./assets/css/style.css" media="all">
     <script src="./assets/js/app.js" defer></script>
   </head>
   <body>
-    
+    <header>
+      <div class="container">
+        <h1>Website</h1>
+        <nav>
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About Me</a></li>
+            <li><a href="">Projects</a></li>
+          </ul>
+        </nav>
+        <button>Contact Me</button>
+      </div>
+    </header>
+
+    <section class="hero">
+      <div class="container">
+        <div class="hero-headline">
+          <h1>
+            Hi, I am <span class="orange">Creeford</span> <span class="break">Full Stack Developer</span>
+          </h1>
+          <p>
+            I am a junior full-stack developer, continuesly 
+            <span class="break">improving my skills in the tech industry</span>
+          </p>
+          <div class="skill-list">
+            <i class="fa-brands fa-html5"></i>
+            <i class="fa-brands fa-css3-alt"></i>
+            <i class="fa-brands fa-js"></i>
+            <img src="./assets/img/java.png" alt="Java">
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
