--- a/index.html
+++ b/index.html
@@ -36,12 +36,9 @@
             I am a junior full-stack developer, continuesly 
             <span class="break">improving my skills in the tech industry</span>
           </p>
-          <div class="skill-list">
-            <i class="fa-brands fa-html5"></i>
-            <i class="fa-brands fa-css3-alt"></i>
-            <i class="fa-brands fa-js"></i>
-            <img src="./assets/img/java.png" alt="Java">
-          </div>
+        </div>
+        <div class="hero-img-box">
+          <img src="./assets/img/cartoon-me.jpg" alt="">
         </div>
       </div>
     </section>
