--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TechVibe</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,21 +12,22 @@
     <script src="./assets/js/app.js" defer></script>
   </head>
   <body>
-    <header>
-      <div class="container">
-        <h1>Website</h1>
-        <nav>
-          <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About Me</a></li>
-            <li><a href="">Projects</a></li>
-          </ul>
-        </nav>
-        <button>Contact Me</button>
-      </div>
-    </header>
-
     <section class="hero">
+      <div class="hero-content">
+        
+      <header>
+        <div class="container">
+          <h1>TechVibe</h1>
+          <nav>
+            <ul>
+              <li><a href="">Home</a></li>
+              <li><a href="">About Me</a></li>
+              <li><a href="">Projects</a></li>
+            </ul>
+          </nav>
+          <button>Contact Me</button>
+        </div>
+      </header>
       <div class="container">
         <div class="hero-headline">
           <h1>
@@ -41,6 +42,52 @@
           <img src="./assets/img/cartoon-me.jpg" alt="">
         </div>
       </div>
+      </div>
+      <div class="hero-overlay"></div>
     </section>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
   </body>
 </html>
