added-about-me-section

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
   </head>
   <body>
     <section class="hero">
-      <div class="hero-content">
-        
+      <div class="hero-content">        
       <header>
         <div class="container">
           <h1>TechVibe</h1>
@@ -33,7 +32,7 @@
           <h1>
             Hi, I am <span class="orange">Creeford</span> <span class="break">Full Stack Developer</span>
           </h1>
-          <p>
+          <p class="p-font-size">
             I am a junior full-stack developer, continuesly 
             <span class="break">improving my skills in the tech industry</span>
           </p>
@@ -44,6 +43,25 @@
       </div>
       </div>
       <div class="hero-overlay"></div>
+    </section>
+
+    <section class="about-me">
+      <div class="container">
+        <div class="about-pic-box section-space">
+          <img src="./assets/img/about-me-pic.jpg" alt="">
+        </div>
+        <div class="about-headline">
+          <h2 class="section-title-size">
+            Creative Thinker, <span class="break">Bridging Logic and Tech</span>
+          </h2>
+          <p class="p-font-size">
+            Passionate full-stack developer driven by lifelong learning, 
+            blending creativity, logic, and tech. Outside coding, I enjoy gaming 
+            and exploring the latest in tech
+          </p>
+          <button class="resume-btn">Resume</button>
+        </div>
+      </div>
     </section>
     <br>
     <br>
