update-about0me

--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
             I am a junior full-stack developer, continuesly 
             <span class="break">improving my skills in the tech industry</span>
           </p>
+          <div class="media-links">
+            <ul>
+              <li><a href="">Linkedin</a></li>
+              <li><a href="">Github</a></li>
+              <li><a href="">LeetCode</a></li>
+            </ul>
+          </div>
         </div>
         <div class="hero-img-box">
           <img src="./assets/img/cartoon-me.jpg" alt="">
@@ -45,11 +52,9 @@
       <div class="hero-overlay"></div>
     </section>
 
-    <section class="about-me">
+    <section class="about-me section-space">
       <div class="container">
-        <div class="about-pic-box section-space">
-          <img src="./assets/img/about-me-pic.jpg" alt="">
-        </div>
+        <img src="./assets/img/about-me-pic.jpg" alt="">
         <div class="about-headline">
           <h2 class="section-title-size">
             Creative Thinker, <span class="break">Bridging Logic and Tech</span>
@@ -62,6 +67,7 @@
           <button class="resume-btn">Resume</button>
         </div>
       </div>
+      <div class="square"></div>
     </section>
     <br>
     <br>
