create-media-links

--- a/index.html
+++ b/index.html
@@ -14,40 +14,40 @@
   <body>
     <section class="hero">
       <div class="hero-content">        
-      <header>
+        <header>
+          <div class="container">
+            <h1>TechVibe</h1>
+            <nav>
+              <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About Me</a></li>
+                <li><a href="">Projects</a></li>
+              </ul>
+            </nav>
+            <button>Contact Me</button>
+          </div>
+        </header>
         <div class="container">
-          <h1>TechVibe</h1>
-          <nav>
-            <ul>
-              <li><a href="">Home</a></li>
-              <li><a href="">About Me</a></li>
-              <li><a href="">Projects</a></li>
-            </ul>
-          </nav>
-          <button>Contact Me</button>
-        </div>
-      </header>
-      <div class="container">
-        <div class="hero-headline">
-          <h1>
-            Hi, I am <span class="orange">Creeford</span> <span class="break">Full Stack Developer</span>
-          </h1>
-          <p class="p-font-size">
-            I am a junior full-stack developer, continuesly 
-            <span class="break">improving my skills in the tech industry</span>
-          </p>
-          <div class="media-links">
-            <ul>
-              <li><a href="">Linkedin</a></li>
-              <li><a href="">Github</a></li>
-              <li><a href="">LeetCode</a></li>
-            </ul>
+          <div class="hero-headline">
+            <h1>
+              Hi, I am <span class="orange">Creeford</span> <span class="break">Full Stack Developer</span>
+            </h1>
+            <p class="p-font-size">
+              I am a junior full-stack developer, continuesly 
+              <span class="break">improving my skills in the tech industry</span>
+            </p>
+            <div class="media-links">
+              <ul>
+                <li><a href=""><i class="fa-brands fa-linkedin-in"></i></a></li>
+                <li><a href=""><i class="fa-brands fa-github"></i></a></li>
+                <li><a href=""><img src="https://cdn.iconscout.com/icon/free/png-512/free-leetcode-logo-icon-download-in-svg-png-gif-file-formats--technology-social-media-vol-4-pack-logos-icons-2944960.png?f=webp&w=256" alt=""></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="hero-img-box">
+            <img src="./assets/img/cartoon-me.jpg" alt="">
           </div>
         </div>
-        <div class="hero-img-box">
-          <img src="./assets/img/cartoon-me.jpg" alt="">
-        </div>
-      </div>
       </div>
       <div class="hero-overlay"></div>
     </section>
