--- a/index.html
+++ b/index.html
@@ -62,6 +62,60 @@
       </div>
       <div class="square"></div>
     </section>
+
+    <section class="projects section-space">
+      <div class="container">
+        <h2 class="section-title-size">
+          Recent Works
+        </h2>
+        <div class="project-list">
+          <div class="project-content">
+            <div class="project-picture-box">
+              <img src="./assets/img/traveling-website.png">
+            </div>
+            <div class="project-context">
+              <div class="project-title">
+                <h3>Quild'de-Guide</h3>
+                <div class="line"></div>                
+              </div>
+              <div class="project-headline">
+                <p>Design & Development</p>
+                <p>2024</p>
+              </div>
+            </div>
+  
+            <div class="project-link">
+              <a href="https://jovial-strudel-dc25e4.netlify.app/" 
+              class="live-btn" target="_blank">Live App</a>
+              <a href="https://github.com/CreefordSanchez/travel-web" 
+              class="git-btn" target="_blank">Learn More</a>
+            </div>
+          </div>
+          <div class="project-content">
+            <div class="project-picture-box">
+              <img src="./assets/img/death-opening.png">
+            </div>
+            <div class="project-context">
+              <div class="project-title">
+                <h3>Typing of A dead</h3>
+                <div class="line"></div>                
+              </div>
+              <div class="project-headline">
+                <p>Design, Development, & Program</p>
+                <p>2024</p>
+              </div>
+            </div>
+            
+            <div class="project-link">
+              <a href="https://the-typing-of-a-death.netlify.app/" 
+              class="live-btn" target="_blank">Live App</a>
+              <a href="https://github.com/CreefordSanchez/the-typing-of-a-death" 
+              class="git-btn" target="_blank">Learn More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <br>
     <br>
     <br>
