added-skill-list

--- a/index.html
+++ b/index.html
@@ -63,6 +63,50 @@
       <div class="square"></div>
     </section>
 
+    <section class="skills section-space">
+      <div class="container">
+        <div class="skills-heading">
+          <h2 class="section-title-size">
+            Skills
+          </h2>
+          <p>
+            I am an experienced programmer with four years of expertise in 
+            software development, specializing in creating efficient and user-
+            friendly solutions while staying up-to-date with industry trends.
+          </p>
+        </div>
+
+        <div class="skill-list">
+          <div class="center-list">
+            
+          </div>
+          <div class="skill-container">
+            <div class="bar">
+              <div class="bar-level"></div>
+            </div>
+            <p>HTML</p>
+          </div>
+          <div class="skill-container">
+            <div class="bar">
+              <div class="bar-level"></div>
+            </div>
+            <p>CSS</p>
+          </div>
+          <div class="skill-container">
+            <div class="bar">
+              <div class="bar-level"></div></div>
+            <p>JS</p>
+          </div>
+          <div class="skill-container">
+            <div class="bar">
+              <div class="bar-level"></div>
+            </div>
+            <p>Java</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="projects section-space">
       <div class="container">
         <h2 class="section-title-size">
@@ -116,6 +160,8 @@
         </div>
       </div>
     </section>
+
+    <section class="contact section-space"></section>
     <br>
     <br>
     <br>
