lazy-forgot-to-push

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
     <link rel="stylesheet" href="./assets/css/style.css" media="all">
-    <script src="./assets/js/app.js" defer></script>
+    <script src="./assets/js/app.js" type="module"></script>
   </head>
   <body>
     <section class="hero">
@@ -161,50 +161,58 @@
       </div>
     </section>
 
-    <section class="contact section-space"></section>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <section class="contact-me section-space">
+      <div class="container">
+        <div class="contact-flex">
+          <div class="contact-info">
+            <div class="contact-title">
+              <h2 class="section-title-size">
+                Contact Me
+              </h2>
+              <p>
+                Get in touch with me! I look forward to hearing from you and will 
+                <span class="break">respond as soon as I can.</span>
+              </p>
+            </div>
+            <div class="my-contact">              
+              <p>(204)-807-9707</p>
+              <p>creewrk@gmail.com</p>
+            </div>
+            <div class="media-links">
+              <a href="">
+                <i class="fa-brands fa-linkedin-in"></i>
+              </a>
+              <a href="">
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+              <a href="">
+                <i class="fa-brands fa-facebook-f"></i>
+              </a>
+            </div>
+             
+          </div>
+          <form action="">
+            <input type="text" class="full-name" placeholder="Full Name">
+            <p class="full-name-error"></p>
+
+            <input type="text" class="email" placeholder="Email">
+            <p class="email-error"></p>
+
+            <textarea class="message" placeholder="Message"></textarea>
+            <p class="message-error"></p>
+
+            <button class="submit">Submit</button>
+          </form>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="container">
+        <h2>TechVibe</h2>
+        <p>
+          &copy; 2024 All Rights Reserved. Terms of Use and Privacy Policy.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
