--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <button>Contact Me</button>
           </div>
         </header>
+
         <div class="container">
           <div class="hero-headline">
             <h1>
@@ -47,7 +48,7 @@
     </section>
 
     <section class="about-me section-space">
-      <div class="container">
+      <div class="container position-down">
         <img src="./assets/img/about-me-pic.jpg" alt="">
         <div class="about-headline">
           <h2 class="section-title-size">
@@ -65,7 +66,7 @@
     </section>
 
     <section class="skills section-space">
-      <div class="container">
+      <div class="container position-down">
         <div class="skills-heading">
           <h2 class="section-title-size">
             Skills
@@ -78,29 +79,26 @@
         </div>
 
         <div class="skill-list">
-          <div class="center-list">
-            
-          </div>
           <div class="skill-container">
             <div class="bar">
-              <div class="bar-level"></div>
+              <div class="bar-level html-bar"></div>
             </div>
             <p>HTML</p>
           </div>
           <div class="skill-container">
             <div class="bar">
-              <div class="bar-level"></div>
+              <div class="bar-level css-bar"></div>
             </div>
             <p>CSS</p>
           </div>
           <div class="skill-container">
             <div class="bar">
-              <div class="bar-level"></div></div>
+              <div class="bar-level js-bar"></div></div>
             <p>JS</p>
           </div>
           <div class="skill-container">
             <div class="bar">
-              <div class="bar-level"></div>
+              <div class="bar-level java-bar"></div>
             </div>
             <p>Java</p>
           </div>
@@ -110,11 +108,11 @@
 
     <section class="projects section-space">
       <div class="container">
-        <h2 class="section-title-size">
+        <h2 class="section-title-size position-down">
           Recent Works
         </h2>
         <div class="project-list">
-          <div class="project-content">
+          <div class="project-content position-down">
             <div class="project-picture-box">
               <img src="./assets/img/traveling-website.png">
             </div>
@@ -136,7 +134,7 @@
               class="git-btn" target="_blank">Learn More</a>
             </div>
           </div>
-          <div class="project-content">
+          <div class="project-content position-down">
             <div class="project-picture-box">
               <img src="./assets/img/death-opening.png">
             </div>
@@ -163,7 +161,7 @@
     </section>
 
     <section class="contact-me section-space">
-      <div class="container">
+      <div class="container position-down">
         <div class="contact-flex">
           <div class="contact-info">
             <div class="contact-title">
