added-load-screen

--- a/index.html
+++ b/index.html
@@ -213,5 +213,12 @@
         </p>
       </div>
     </footer>
+
+    <div class="load-animation">
+      <h1>
+        <span class="position-down heading-one">Hello, my name's</span>
+        <span class="break position-down heading-two">Creeford!</span>
+      </h1>
+    </div>
   </body>
 </html>
