--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
         <h1>TechVibe</h1>
         <nav>
           <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About Me</a></li>
-            <li><a href="">Projects</a></li>
+            <li><a href="" class="p-font-size">Home</a></li>
+            <li><a href="" class="p-font-size">About Me</a></li>
+            <li><a href="" class="p-font-size">Projects</a></li>
           </ul>
         </nav>
         <button>Contact Me</button>
+        <i class="fa-solid fa-bars"></i>
       </div>
     </header>
     
@@ -44,7 +45,6 @@
           </div>
         </div>
       </div>
-      <div class="hero-overlay"></div>
     </section>
 
     <section class="about-me section-space">
@@ -63,7 +63,7 @@
             blending creativity, logic, and tech. Outside coding, I enjoy gaming 
             and exploring the latest in tech
           </p>
-          <button class="resume-btn">Resume</button>
+          <button class="resume-btn p-font-size">Resume</button>
         </div>
       </div>
     </section>
@@ -211,7 +211,7 @@
     <footer>
       <div class="container">
         <h2>TechVibe</h2>
-        <p>
+        <p class="p-font-size">
           &copy; 2024 All Rights Reserved. Terms of Use and Privacy Policy.
         </p>
       </div>
