--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </section>
 
     <section class="about-me section-space">
-      <div class="container ">
+      <div class="container position-down">
         <div class="about-pic-container">
           <div class="square"></div>
           <img src="./assets/img/about-me-pic.jpg" alt="Creeford Picture">
@@ -69,7 +69,7 @@
     </section>
 
     <section class="skills section-space">
-      <div class="container ">
+      <div class="container position-down">
         <div class="skills-heading">
           <h2 class="section-title-size">
             Skills
@@ -111,11 +111,11 @@
 
     <section class="projects section-space">
       <div class="container">
-        <h2 class="section-title-size ">
+        <h2 class="section-title-size position-down">
           Recent Works
         </h2>
         <div class="project-list">
-          <div class="project-content ">
+          <div class="project-content position-down">
             <div class="project-picture-box">
               <img src="./assets/img/traveling-website.png">
             </div>
@@ -137,7 +137,7 @@
               class="git-btn" target="_blank">Learn More</a>
             </div>
           </div>
-          <div class="project-content ">
+          <div class="project-content position-down">
             <div class="project-picture-box">
               <img src="./assets/img/death-opening.png">
             </div>
@@ -164,7 +164,7 @@
     </section>
 
     <section class="contact-me section-space">
-      <div class="container ">
+      <div class="container position-down">
         <div class="contact-flex">
           <div class="contact-info">
             <div class="contact-title">
@@ -195,13 +195,13 @@
           </div>
           <form action="">
             <input type="text" class="full-name" placeholder="Full Name">
-            <p class="full-name-error"></p>
+            <p class="full-name-error p-font-size"></p>
 
             <input type="text" class="email" placeholder="Email">
-            <p class="email-error"></p>
+            <p class="email-error p-font-size"></p>
 
             <textarea class="message" placeholder="Message"></textarea>
-            <p class="message-error"></p>
+            <p class="message-error p-font-size"></p>
 
             <button class="submit">Submit</button>
           </form>
@@ -219,8 +219,8 @@
 
     <div class="load-animation">
       <h1>
-        <span class=" heading-one">Hello, my name's</span>
-        <span class="break  heading-two">Creeford!</span>
+        <span class="heading-one position-down">Hello, my name's</span>
+        <span class="break heading-two position-down">Creeford!</span>
       </h1>
     </div>
   </body>
